style: overflow is no longer hidden

--- a/src/index.css
+++ b/src/index.css
@@ -108,17 +108,11 @@ a {
   html {
     font-size: 40%;
   }
-  body {
-    overflow: hidden;
-  }
 }
 
 @media only screen and (min-width: 700px) and (max-width: 1024px) and (orientation: landscape) {
   html {
     font-size: 45%;
-  }
-  body {
-    overflow: hidden;
   }
 }
 
